fix footer overlap due 2 front pg slider css adjs

--- a/wp-content/themes/ideum/stylesheets/components/_footer.scss
+++ b/wp-content/themes/ideum/stylesheets/components/_footer.scss
@@ -163,3 +163,10 @@ $footer-font-color: $white;
     }
   }
 }
+
+.home #footer {
+  margin-top: $home-footer-margin-top;
+  background-color: $footer-background-color;
+  color: $footer-font-color;
+  padding-top: $footer-overlap-height;
+}
